# libAlgorithm

./: CMakeLists.txt  README.md
scripts/: git-mkdir.sh  git-touch.sh
